--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ paginate_path: blog/page:num # jekyll-paginate > blog page
 jekyll-mentions: https://twitter.com # jekyll-mentions > service used when @replying
 twitter:
   username: DavidDarnes # jekyll-seo-tag > Owners twitter username
-author: DavidDarnes # jekyll-seo-tag > default author
+author: sagisk # jekyll-seo-tag > default author
 social: # jekyll-seo-tag > social overrides
   name: David Darnes # jekyll-seo-tag > real name
   links:  # jekyll-seo-tag > social aliases (sameAs)
@@ -93,9 +93,9 @@ defaults:
 # 7. Site settings
 encoding: utf-8 # Make sure the encoding is right
 lang: en-GB # Set the site language
-title: "Alembic" # Site name or title, also used in jekyll-seo-tag
+title: "AboutData" # Site name or title, also used in jekyll-seo-tag
 logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
-description: "Alembic is a starting point for Jekyll projects. Rather than starting from scratch, this boilerplate is designed to get the ball rolling immediately" # Site description and default description, also used in jekyll-seo-tag
+description: "My personal website" # Site description and default description, also used in jekyll-seo-tag
 url: "https://sagisk.github.io" # Site url, also used in jekyll-seo-tag
 baseurl: ""
 repo: ""
@@ -134,8 +134,8 @@ navigation_header:
 
 
 navigation_footer:
-- title: Created by David Darnes
-  url: https://darn.es
+- title: Created by sagisk
+  #url: https://darn.es
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
   Twitter: #https://twitter.com/DavidDarnes
